# ai-nm26-tripletex_V2

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  app.yaml  pyproject.toml
.agents/rules/: double-pass.md
ai_nm26_tripletex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: AI-NM26_Documentation.md  AI-NM26_Rules.md
scripts/: probe_tripletex_proxy.py  run_local_sandbox_test.py
tripletex_agent/: __init__.py  attachments.py  config.py  executor.py  gemini_planner.py  main.py  models.py  planner.py  planning_base.py  task_compiler.py  task_intents.py  tripletex_client.py
